Added a little JS script :)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+<!DOCTYPE html>
+<style>
+    .myDiv {
+        border: 5px outset rgb(173, 215, 142);
+        background-color: rgb(138, 230, 98);
+        text-align: center;
+    }
+    .myButton {
+        border: 5px outset rgba(118, 35, 19, 0.755);
+        background-color: rgb(203, 106, 71);
+        text-align: center;
+    }
+</style>
+
+
+<div class="myDiv">
+    30 Years of Coffee Imports
+</div>
+<script type="text/javascript" src="test.js"></script>
