--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
     }
 </style>
 
+<!-- Load d3.js -->
+<!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
 
 <div class="myDiv">
     30 Years of Coffee Imports
 </div>
-<script type="text/javascript" src="test.js"></script>
+<svg width="800" height="400">
+
+</svg>
+
+
+
+<script type="module" src="test.js"></script>
