Fucked up whoops

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
 
 <div class="myDiv">
-    30 Years of Coffee Imports
+    Coffee Imports and Consumption 1990 - 2019
 </div>
 <svg width="800" height="400">
 
