Test with new script tags

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+
 <style>
     .myDiv {
         border: 5px outset rgb(173, 215, 142);
@@ -24,7 +26,7 @@
 
 
 
-<script src="https://d3js.org/d3.v4.min.js">
+<script>
     
     console.log("Reading from script tag now");
     console.log("Retrieving dataset as csv");
