--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
     
     // import both datasets from csv files
     d3.csv("/data/Coffee_import.csv", function(data){
-        for (var i = 0; i < data; i++) {
+        console.log("No errors yet");
+
+        for (var i = 0; i < data.length; i++) {
             console.log(data[i]);
         }
+    
     });
 
 </script>
